--- a/site/index.html
+++ b/site/index.html
@@ -123,8 +123,8 @@
               <a href="/about.html"><font>here</font></a
               >. If you're using chrome
               <a href="/frames-chrome/1.html"
-                ><font>click here for a smoother version</font></a
-              >
+                ><font>click here for a smoother version that works on some browsers</font></a
+              > (HEADS UP: You might have to close your browser window to stop it)
             </font>
           </td>
         </tr>
